--- a/index.ipynb
+++ b/index.ipynb
@@ -38,26 +38,57 @@
     "\n",
     "Each number is the sum of the two preceding. Write a recursive function that calculates the nth number of the Fibonacci sequence. For example, our sequence above would correspond to:\n",
     "\n",
-    "fib(1) = 1 #The 1st element in the sequence is 1\n",
-    "fib(2) = 1 #The 2nd element in the sequence is 1\n",
-    "fib(3) = 2 #The 3rd element in the sequence is 2\n",
-    "fib(4) = 3 #The 4th element in the sequence is 3\n",
-    "fib(5) = 5 #The 5th element in the sequence is 5\n",
-    "fib(6) = 8 #The 6th element in the sequence is 8\n",
-    "fib(7) = 13 #The 7th element in the sequence is 13\n",
-    "fib(8) = 21 #The 8th element in the sequence is 21\n",
-    "fib(9) = 34 #The 9th element in the sequence is 34"
+    "fib(1) = 1 #The 1st element in the sequence is 1  \n",
+    "fib(2) = 1 #The 2nd element in the sequence is 1  \n",
+    "fib(3) = 2 #The 3rd element in the sequence is 2  \n",
+    "fib(4) = 3 #The 4th element in the sequence is 3  \n",
+    "fib(5) = 5 #The 5th element in the sequence is 5  \n",
+    "fib(6) = 8 #The 6th element in the sequence is 8  \n",
+    "fib(7) = 13 #The 7th element in the sequence is 13  \n",
+    "fib(8) = 21 #The 8th element in the sequence is 21  \n",
+    "fib(9) = 34 #The 9th element in the sequence is 34  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here\n",
     "def fib(n):\n",
-    "    return nth_number"
+    "    if n < 1:\n",
+    "        return \"N must be an integer greater then 1\"\n",
+    "    elif n in [1,2]:\n",
+    "            return 1\n",
+    "    else:\n",
+    "        return fib(n-1) + fib(n-2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 10):\n",
+    "    print(fib(i))"
    ]
   },
   {
@@ -73,13 +104,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current L: [1, [2, 3, [4, 5, 6]], 7, [8], [9, 10]]\n",
+      "Current L: [2, 3, [4, 5, 6]]\n",
+      "Current L: [4, 5, 6]\n",
+      "Current L: [8]\n",
+      "Current L: [9, 10]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here\n",
-    "def flat_list(L):\n",
-    "    return flattened"
+    "def flat_list(L, result=[]):\n",
+    "    print('Current L:', L) #Optional, to display process\n",
+    "    for i in L:\n",
+    "        if type(i) == list:\n",
+    "            flat_list(i, result)\n",
+    "        else:\n",
+    "            result.append(i)\n",
+    "    return result\n",
+    "L = [1,[2,3,[4,5,6]], 7, [8], [9,10]]\n",
+    "flat_list(L)"
    ]
   },
   {
@@ -92,12 +152,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Your answer here."
+    "### Answers may vary. General explanation below.\n",
+    "\n",
+    "Depth first search navigates down a nested data structure, while breadth first goes one layer at a time, successively deeper but processing an entire layer before moving on to deeper layers."
    ]
   },
   {
