--- a/index.ipynb
+++ b/index.ipynb
@@ -4,33 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Recursive Functions - Lab"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Recursive Functions - Lab\n",
+    "\n",
     "## Introduction\n",
     "\n",
-    "Now that you've seen a little preview of recursive functions, it's time to give them a try!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Now that you've seen a little preview of recursive functions, it's time to give them a try!\n",
+    "\n",
     "## Objectives\n",
     "You will be able to:\n",
     "* Understand and use the concept of a recursive function \n",
     "* Understand scope in the context of recursive functions\n",
-    "* Understand and compare depth first versus breadth first searches"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "* Understand and compare depth first versus breadth first searches\n",
+    "\n",
     "## Fibonacci\n",
     "\n",
     "The Fibonacci sequence starts off:\n",
@@ -38,14 +23,22 @@
     "\n",
     "Each number is the sum of the two preceding. Write a recursive function that calculates the nth number of the Fibonacci sequence. For example, our sequence above would correspond to:\n",
     "\n",
-    "fib(1) = 1 #The 1st element in the sequence is 1  \n",
+    "fib(1) = 1 #The 1st element in the sequence is 1 \n",
+    "\n",
     "fib(2) = 1 #The 2nd element in the sequence is 1  \n",
+    "\n",
     "fib(3) = 2 #The 3rd element in the sequence is 2  \n",
+    "\n",
     "fib(4) = 3 #The 4th element in the sequence is 3  \n",
+    "\n",
     "fib(5) = 5 #The 5th element in the sequence is 5  \n",
+    "\n",
     "fib(6) = 8 #The 6th element in the sequence is 8  \n",
+    "\n",
     "fib(7) = 13 #The 7th element in the sequence is 13  \n",
+    "\n",
     "fib(8) = 21 #The 8th element in the sequence is 21  \n",
+    "\n",
     "fib(9) = 34 #The 9th element in the sequence is 34  "
    ]
   },
