Updating solutions to remove mutable default parameter

--- a/index.ipynb
+++ b/index.ipynb
@@ -62,23 +62,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "5\n",
-      "8\n",
-      "13\n",
-      "21\n",
-      "34\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(1, 10):\n",
     "    print(fib(i))"
@@ -92,7 +76,9 @@
     "\n",
     "Write a function that takes a nested list and flattens it to a list of ints, floats and strings.\n",
     "For example the nested list [1,[2,3[4,5,6]], 7, [8], [9,10]] would become [1,2,3,4,5,6,7,8,9,10] or \n",
-    "[1,2[3,4,[5]]] would become [1,2,3,4,5]."
+    "[1,2[3,4,[5]]] would become [1,2,3,4,5].\n",
+    "\n",
+    "> **Note**: Be careful how you initialize your function! See [this link](https://docs.quantifiedcode.com/python-anti-patterns/correctness/mutable_default_value_as_argument.html) for some potential pitfalls you could encounter if you're not careful!"
    ]
   },
   {
@@ -123,8 +109,11 @@
     }
    ],
    "source": [
-    "def flat_list(L, result=[]):\n",
-    "    print('Current L:', L) #Optional, to display process\n",
+    "def flat_list(L, result=None, print_results=True):\n",
+    "    if result is None:\n",
+    "        result = []\n",
+    "    if print_results:\n",
+    "        print('Current L:', L) #Optional, to display process\n",
     "    for i in L:\n",
     "        if type(i) == list:\n",
     "            flat_list(i, result)\n",
@@ -178,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
