--- a/index.ipynb
+++ b/index.ipynb
@@ -61,7 +61,9 @@
     "\n",
     "Write a function that takes a nested list and flattens it to a list of ints, floats and strings.\n",
     "For example the nested list [1,[2,3[4,5,6]], 7, [8], [9,10]] would become [1,2,3,4,5,6,7,8,9,10] or \n",
-    "[1,2[3,4,[5]]] would become [1,2,3,4,5]."
+    "[1,2[3,4,[5]]] would become [1,2,3,4,5].\n",
+    "\n",
+    "> **Note**: Be careful how you initialize your function! See [this link](https://docs.quantifiedcode.com/python-anti-patterns/correctness/mutable_default_value_as_argument.html) for some potential pitfalls you could encounter if you're not careful!"
    ]
   },
   {
@@ -118,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
