--- a/index.ipynb
+++ b/index.ipynb
@@ -11,10 +11,13 @@
     "Now that you've seen a little preview of recursive functions, it's time to give them a try!\n",
     "\n",
     "## Objectives\n",
+    "\n",
     "You will be able to:\n",
-    "* Understand and use the concept of a recursive function \n",
-    "* Understand scope in the context of recursive functions\n",
-    "* Understand and compare depth first versus breadth first searches\n",
+    "\n",
+    "* Describe the concept of a recursive function\n",
+    "* Create a recursive function\n",
+    "* Demonstrate how local scope changes with recursive functions\n",
+    "* Compare depth first versus breadth first searches\n",
     "\n",
     "## Fibonacci\n",
     "\n",
@@ -222,7 +225,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
