--- a/index.ipynb
+++ b/index.ipynb
@@ -104,11 +104,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Flat List\n",
+    "## Flat list\n",
     "\n",
     "Write a function that takes a nested list and flattens it to a list of ints, floats and strings.\n",
     "For example the nested list [1,[2,3[4,5,6]], 7, [8], [9,10]] would become [1,2,3,4,5,6,7,8,9,10] or \n",
-    "[1,2[3,4,[5]]] would become [1,2,3,4,5].\n",
+    "[1,2, [3,4,[5]]] would become [1,2,3,4,5].\n",
     "\n",
     "> **Note**: Be careful how you initialize your function! See [this link](https://docs.quantifiedcode.com/python-anti-patterns/correctness/mutable_default_value_as_argument.html) for some potential pitfalls you could encounter if you're not careful!"
    ]
@@ -119,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n",
+    "# Your code here\n",
     "def flat_list(L):\n",
     "    return flattened"
    ]
@@ -183,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your answer here."
+    "# Your answer here"
    ]
   },
   {
