--- a/index.ipynb
+++ b/index.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n",
+    "# Your code here\n",
     "def fib(n):\n",
     "    return nth_number"
    ]
@@ -63,7 +63,7 @@
    "outputs": [],
    "source": [
     "# __SOLUTION__ \n",
-    "#Your code here\n",
+    "# Your code here\n",
     "def fib(n):\n",
     "    if n < 1:\n",
     "        return \"N must be an integer greater then 1\"\n",
@@ -107,8 +107,8 @@
     "## Flat list\n",
     "\n",
     "Write a function that takes a nested list and flattens it to a list of ints, floats and strings.\n",
-    "For example the nested list [1,[2,3[4,5,6]], 7, [8], [9,10]] would become [1,2,3,4,5,6,7,8,9,10] or \n",
-    "[1,2, [3,4,[5]]] would become [1,2,3,4,5].\n",
+    "For example the nested list [1, [2, 3, [4, 5, 6]], 7, [8], [9, 10]] would become [1, 2, 3, 4, 5, 6, 7, 8, 9, 10] or \n",
+    "[1, 2, [3, 4, [5]]] would become [1, 2, 3, 4, 5].\n",
     "\n",
     "> **Note**: Be careful how you initialize your function! See [this link](https://docs.quantifiedcode.com/python-anti-patterns/correctness/mutable_default_value_as_argument.html) for some potential pitfalls you could encounter if you're not careful!"
    ]
