--- a/index.ipynb
+++ b/index.ipynb
@@ -26,6 +26,7 @@
     "\n",
     "Each number is the sum of the two preceding. Write a recursive function that calculates the nth number of the Fibonacci sequence. For example, our sequence above would correspond to:\n",
     "\n",
+    "```python\n",
     "fib(1) = 1 #The 1st element in the sequence is 1\n",
     "\n",
     "fib(2) = 1 #The 2nd element in the sequence is 1\n",
@@ -42,7 +43,8 @@
     "\n",
     "fib(8) = 21 #The 8th element in the sequence is 21\n",
     "\n",
-    "fib(9) = 34 #The 9th element in the sequence is 34"
+    "fib(9) = 34 #The 9th element in the sequence is 34\n",
+    "```"
    ]
   },
   {
@@ -107,8 +109,8 @@
     "## Flat list\n",
     "\n",
     "Write a function that takes a nested list and flattens it to a list of ints, floats and strings.\n",
-    "For example the nested list [1, [2, 3, [4, 5, 6]], 7, [8], [9, 10]] would become [1, 2, 3, 4, 5, 6, 7, 8, 9, 10] or \n",
-    "[1, 2, [3, 4, [5]]] would become [1, 2, 3, 4, 5].\n",
+    "\n",
+    "For example the nested list `[1, [2, 3, [4, 5, 6]], 7, [8], [9, 10]]` would become `[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]` or `[1, 2, [3, 4, [5]]]` would become `[1, 2, 3, 4, 5]`.\n",
     "\n",
     "> **Note**: Be careful how you initialize your function! See [this link](https://docs.quantifiedcode.com/python-anti-patterns/correctness/mutable_default_value_as_argument.html) for some potential pitfalls you could encounter if you're not careful!"
    ]
@@ -225,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   },
   "toc": {
    "base_numbering": 1,
